--- a/webgl/globe3d/index.html
+++ b/webgl/globe3d/index.html
@@ -16,59 +16,65 @@
 
 window.addEventListener( "load", function() {
 
+    var lightType = 'lights';
+    var lightIntensity = 0.7;
+    var lightAmbience = 0.1;
+    var autoRotate = true;
+    var autoRotateSpeed = 2;
+
 	var earth2 = new Earth( "earth2", {
-		light: 'lights',
-		lightIntensity : 0.7,
-		lightAmbience : 0.1,
+		light: lightType,
+		lightIntensity : lightIntensity,
+		lightAmbience : lightAmbience,
         mapLandColor: '#97c53a',
         mapSeaColor: '#1167a4',
-        autoRotate: false,
-        autoRotateSpeed: 2
+        autoRotate: autoRotate,
+        autoRotateSpeed: autoRotateSpeed
 	} );
     var earth3 = new Earth( "earth3", {
-        light: 'lights',
-        lightIntensity : 0.7,
-        lightAmbience : 0.1,
+        light: lightType,
+        lightIntensity : lightIntensity,
+        lightAmbience : lightAmbience,
         mapLandColor: '#a0be66',
         mapSeaColor: '#26618b',
-        autoRotate: false,
-        autoRotateSpeed: 2
+        autoRotate: autoRotate,
+        autoRotateSpeed: autoRotateSpeed
     } );
     var earth4 = new Earth( "earth4", {
-        light: 'lights',
-        lightIntensity : 0.7,
-        lightAmbience : 0.1,
+        light: lightType,
+        lightIntensity : lightIntensity,
+        lightAmbience : lightAmbience,
         mapLandColor: '#adb36b',
         mapSeaColor: '#3b5971',
-        autoRotate: false,
-        autoRotateSpeed: 2
+        autoRotate: autoRotate,
+        autoRotateSpeed: autoRotateSpeed
     } );
     var earth5 = new Earth( "earth5", {
-        light: 'lights',
-        lightIntensity : 0.7,
-        lightAmbience : 0.1,
+        light: lightType,
+        lightIntensity : lightIntensity,
+        lightAmbience : lightAmbience,
         mapLandColor: '#b9a777',
         mapSeaColor: '#565459',
-        autoRotate: false,
-        autoRotateSpeed: 2
+        autoRotate: autoRotate,
+        autoRotateSpeed: autoRotateSpeed
     } );
     var earth6 = new Earth( "earth6", {
-        light: 'lights',
-        lightIntensity : 0.7,
-        lightAmbience : 0.1,
+        light: lightType,
+        lightIntensity : lightIntensity,
+        lightAmbience : lightAmbience,
         mapLandColor: '#ca9d80',
         mapSeaColor: '#704f3e',
-        autoRotate: false,
-        autoRotateSpeed: 2
+        autoRotate: autoRotate,
+        autoRotateSpeed: autoRotateSpeed
     } );
     var earth7 = new Earth( "earth7", {
-        light: 'lights',
-        lightIntensity : 0.7,
-        lightAmbience : 0.1,
+        light: lightType,
+        lightIntensity : lightIntensity,
+        lightAmbience : lightAmbience,
         mapLandColor: '#a99185',
         mapSeaColor: '#826c61',
-        autoRotate: false,
-        autoRotateSpeed: 2
+        autoRotate: autoRotate,
+        autoRotateSpeed: autoRotateSpeed
     } );
 
 } );
