--- a/webgl/alpha/index.html
+++ b/webgl/alpha/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Expires" content="-1">
   <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <base href="/webgl/alpha/" target="_blank">
+  <base href="https://bbmv.github.io/webgl/alpha/" target="_blank">
   <title>Baetes | Fashion Technology & VCommerce</title>
   <link rel="icon" type="image/png" href="/images/baetes-icon.ico">
 </head>
