--- a/webgl/acttv/index.html
+++ b/webgl/acttv/index.html
@@ -11,7 +11,7 @@
         }
 		body {
             font-family: sans-serif;
-			background-color: #b9e2ff;
+			background-color: #a2c6e2;
 /*			background-image: linear-gradient(-162deg, #FCFBF6 16%, #D7D1C5 99%);
 			background-attachment: fixed;*/
             overflow: hidden;
@@ -41,7 +41,7 @@
       z-index: 1000;
     }
     .button {
-      width: 100px;
+      width: 150px;
       height: 40px;
       line-height: 40px;
       text-align: center;
@@ -56,11 +56,11 @@
 </head>
 <body>
   <div class="panel">
-    <div class="button" id="action1">Action 1</div>
-    <div class="button" id="action2">Action 2</div>
-	<!--div class="button" id="action3">Action 3</div>
-	<div class="button" id="action4">Action 4</div>
-    <div class="button" id="action5">stop PB</div-->
+    <div class="button" id="action1">Screen Play</div>
+    <div class="button" id="action2">Subwoofer Play</div>
+	<div class="button" id="action3">Play</div>
+	<!--div class="button" id="action4">Playback</div-->
+    <!--div class="button" id="action5">stop PB</div-->
   </div>
 	<p id="loading">Loading...</p>
 	<div id="container3D"></div>
