--- a/webgl/acttv/index.html
+++ b/webgl/acttv/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Tiles</title>
+	<title>Led TV</title>
 	<style>
         * {
             margin: 0;
