--- a/webgl/acttv/index.html
+++ b/webgl/acttv/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Led TV</title>
 	<style>
         * {
@@ -58,11 +60,13 @@
 	<p id="loading">Loading...</p>
 	<div id="container3D"></div>
 	<div class="panel">
-		<div class="button" id="action1">Screen Play</div>
-		<div class="button" id="action2">Subwoofer Play</div>
-		<div class="button" id="action3">Play</div>
-		<!--div class="button" id="action4">Playback</div-->
-		<!--div class="button" id="action5">stop PB</div-->
+		<div class="button" id="action1">action1</div>
+		<div class="button" id="action2">action2</div>
+		<div class="button" id="action3">action3</div>
+		<div class="button" id="action4">action4</div>
+		<div class="button" id="action5">action5</div>
+		<div class="button" id="action6">action6</div>
+		<div class="button" id="action7">action7</div>
 	</div>
 
 	<article id="ui">
@@ -78,7 +82,7 @@
 			</div>
 			<div class="btn"  id="subwoofer">
 				<div class="icon"></div>
-				<div class="text">Datachable subwoofer for incredible immersive surround sound</div>
+				<div class="text">Detachable subwoofer for incredible immersive surround sound</div>
 			</div>
 		</section>
 	</article>
