--- a/webgl/shelves/index.html
+++ b/webgl/shelves/index.html
@@ -22,10 +22,22 @@
 	</style>
 </head>
 <body>
-
-<div id="header"></div>
-<div id="shelves"></div>
-<div id="footer"></div>
+<div id="header">
+	<div class="txt side">nope.</div>
+	<div class="txt">Like it...</div>
+	<div class="txt side">love it.</div>
+</div>
+<div id="showroom">
+	<div id="wishlist"></div>
+	<div id="shelves"></div>
+</div>
+<div id="footer">
+	<div class="btn-container">
+		<div class="btn small side"></div>
+		<div class="btn big bgr-to-favorites"></div>
+		<div class="btn small side"></div>
+	</div>
+</div>
 
 <script src="./dist/app.js"></script>
 
