--- a/webgl/shelves/index.html
+++ b/webgl/shelves/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<base href="https://bbmv.github.io/webgl/shelves/">
 	<title>Shelves</title>
 
 	<style>
