--- a/webgl/grillex3d/index.html
+++ b/webgl/grillex3d/index.html
@@ -105,6 +105,9 @@
 <div id="tools">
 	<div id="progressbar"></div>
 	<div id="selectors"></div>
+	<div id="allArms" class="button">All arms</div>
+	<div id="noArms" class="button">No arms</div>
+	<div id="endArms" class="button">Arms on ends</div>
 </div>
 <div id="loadingCircle"></div>
 <script src="./dist/grillex.js"></script>
