--- a/webgl/xr/index.html
+++ b/webgl/xr/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Configurator WebXR Test</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<style>
 		html, body {
 			width: 100%;
@@ -81,13 +81,13 @@
 			cursor: pointer;
 		}
 		#product1 {
-			background: no-repeat center / contain #fff url(/assets/images/armchair.png);
+			background: no-repeat center / contain #fff url(./assets/images/armchair.png);
 		}
 		#product2 {
-			background: no-repeat center / contain #fff url(/assets/images/basin.png);
+			background: no-repeat center / contain #fff url(./assets/images/basin.png);
 		}
 		#product3 {
-			background: no-repeat center / contain #fff url(/assets/images/washbasin.png);
+			background: no-repeat center / contain #fff url(./assets/images/washbasin.png);
 		}
 		.active {
 			outline: solid #f00;
