--- a/webgl/web-configure/index.html
+++ b/webgl/web-configure/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<base href="/webgl/web-configure/">
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<base href="/webgl/web-configure/">
 	<title>Configurator Test</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/webgl/web-configure/css/style.css">
 	<style>
 		html, body {
 			width: 100%;
@@ -32,7 +32,7 @@
 	<div id="container0" style="width:100%; height:100%;"></div>
 </div>
 
-<script src="/dist/configure.js"></script>
+<script src="/webgl/web-configure/dist/configure.js"></script>
 <script>
 	(async function() {
 		const configurator = new Configurator({
