--- a/webgl/QuickLook/index.html
+++ b/webgl/QuickLook/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <a rel="ar" href="flower_tulip.usdz" download>
-	<img src="redchair.jpg">
+	<img src="tulip.jpg">
 </a>
 	Click the image to launch AR
 </body>
