--- a/webgl/ar-test/index.html
+++ b/webgl/ar-test/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Configurator WebXR Test</title>
-	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="./css/style.css">
 	<base href="/webgl/ar-test/">
 
 	<style>
@@ -95,7 +95,7 @@
 	<div id="container0" style="position: absolute; width:70%; height:70%; top: 10%; left: 15%;"></div>
 </div>
 
-<script src="/dist/configure.js"></script>
+<script src="./dist/configure.js"></script>
 <script>
 	let configurator = new Configurator({
 		debug: true,
