--- a/webgl/ar-test/index.html
+++ b/webgl/ar-test/index.html
@@ -7,7 +7,7 @@
 
 	<title>Configurator WebXR Test</title>
 	<link rel="stylesheet" href="./css/style.css">
-	<base href="/webgl/ar-test/">
+	<!--base href="/webgl/ar-test/"-->
 
 	<style>
 		html, body {
